--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
+        android:name=".HipChopsApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_hipchat"
         android:label="@string/app_name"
