--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:1.10.19'
+    testApt 'com.google.dagger:dagger-compiler:2.1'
 
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:cardview-v7:23.3.0'
